--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/pStyle.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <meta name="description" content="Hey, if you were searching for it you found it, if not then you found something even better. Welcome to Mahmoud Yousif's official portfolio page!">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <style>
     /*
